# project-prometheus

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_VARIABLES.template.md  GUIDE.md  HEARTBEAT.md  README.md  ROADMAP.md  __init__.py  __main__.py  affiliate_tracker.py  agent_loops.py  agent_protocol.py  ai_companion.py  ai_therapist.py  alignment_engine.py  architecture_mutator.py  audit_trail_ui.py  auto_tester.py  autonomous_goal_engine.py  avatar_3d.html  bb_engines.py  bb_engines_additions.py  biometric_empathy.py  browser_agent.py  bug_bounty_hunter.py  build_tools.py  calendar_manager.py  causal_engine.py  chat_bridge.py  claude_code_tools.py  claw_harness.py  cloud_deploy.sh  cloud_orchestrator.py  code_ledger.py  code_review_agent.py  cognitive_architect.py  collective_world_model.py  (+156 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
agent_modules/: __init__.py  hackerone_tool.py  oauth_engine.py  resource_manager.py
benchmarks/: fibonacci.nexa  matrix_mul.nexa  sort_perf.nexa
docs/: RESEARCH_SUMMARY.md
docs/blog/: 01_memory_architecture.md  02_consciousness_simulation.md
skills/bug_bounty/: SKILL.md
skills/email/: SKILL.md
skills/file_manager/: SKILL.md
skills/moltbook/: SKILL.md
skills/system_control/: SKILL.md
skills/web_search/: SKILL.md
static/: goals_dashboard.html  index.html  mind_palace.html
tests/: debug_agent.py  simple_test.py  test_arbitrage_engine.py  test_biometric_empathy.py  test_ledger.json  test_p2p_federation.py  test_rl_hobby.py  test_social_influencer.py  test_wasm_sandbox.py  verify_anime_tts.py  verify_avatar.py  verify_deployment.py  verify_end_to_end_evolution.py  verify_ethics.py  verify_godmode_fix.py  verify_hive_mind.py  verify_hyper_evolution.py  verify_mesh.py  verify_mission_control.py  verify_multimodal.py  verify_parsing.py  verify_phase22.py  verify_reality.py  verify_replication.py  verify_safety.py  verify_self_mod.py  verify_startup.py
(+5 files in other folders)
